--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "sass:watch": "sass assets/scss/app.scss assets/css/app.css -w"
   },
   "dependencies": {
-    "bootstrap": "^5.2.2"
+    "bootstrap": "^5.2.2",
+    "bootstrap-icons": "^1.9.1"
   }
 }
